--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <p>This is a simple webpage hosted on GitHub Pages.</p>
 
 <p>Here's a picture of a cute cat:</p>
-<img src="https://placekitten.com/200/300" alt="A cute kitten">
+<img src="american spirit black" alt="our cigarettes">
 
 
 <p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
