--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <p>This is a simple webpage hosted on GitHub Pages.</p>
 
-<p>Here's a picture of a cute cat:</p>
+<p>Here's a picture of one of our cigarettes:</p>
 <img src="american spirit black" alt="our cigarettes">
 
 
