--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
         
         <div class="images">
             <img src="djarum black.jpg" alt="Jabu Cigs Product 1">
-            <img src="newport-newport-cigarettes.webp" alt="Jabu Cigs Product 2">
+            <img src="MARLBORO-BLACK08.webp" alt="Jabu Cigs Product 2">
+            <img src="Dunhill-international-Menthol-grande.webp" alt="Jabu Cigs Product 3">
+            <img src="newport-newport-cigarettes.webp" alt="Jabu Cigs Product 4">
         </div>
         
         <h2>Our Products</h2>
