--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>My First GitHub Page</title>
+<title>satisfy your cravings with our delectable cigarettes</title>
 
 </head>
 
@@ -16,20 +16,15 @@
 
 <header>
 
-<h1>Welcome to My Website!</h1>
+<h1>Welcome</h1>
 
 </header>
 
 
 <main>
 
-<p>This is a simple webpage hosted on GitHub Pages.</p>
-
-<p>Here's a picture of one of our cigarettes:</p>
+<p>dont be shy, sneak a peak:</p>
 <img src="american spirit black" alt="our cigarettes">
-
-
-<p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
 
 </main>
 
