--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
 
 <main>
 
-<p>dont be shy, sneak a peak:</p>
-<img src="american spirit black" alt="our cigarettes">
+<p>DONT BE SHY SNEAK A PEAK:</p>
+
+    <img src="american spirit black" alt="our cigarettes">
 
 </main>
 
 
 <footer>
 
-<p>&copy; 2025 Your Name</p>
+<p>&copy; JABU-CIGS</p>
 
 </footer>
 
@@ -91,7 +92,7 @@
         <div class="images">
             <img src="djarum black.jpg" alt="Jabu Cigs Product 1">
             <img src="MARLBORO-BLACK08.webp" alt="Jabu Cigs Product 2">
-            <img src="Dunhill-international-Menthol-grande.webp" alt="Jabu Cigs Product 3">
+            <img src="Dunhill-international-Menthol_grande.webp" alt="Jabu Cigs Product 3">
             <img src="newport-newport-cigarettes.webp" alt="Jabu Cigs Product 4">
         </div>
         
