--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             margin: 0;
             padding: 0;
             text-align: center;
-            background-color: #f4f4f4;
+            background: url('woman holding gaff.jpeg') no-repeat center center fixed;
+            background-size: cover;      
         }
         .header {
             background-color: #333;
@@ -91,9 +92,9 @@
         
         <div class="images">
             <img src="djarum black.jpg" alt="Jabu Cigs Product 1">
-            <img src="MARLBORO-BLACK08.webp" alt="Jabu Cigs Product 2">
-            <img src="Dunhill-international-Menthol_grande.webp" alt="Jabu Cigs Product 3">
-            <img src="newport-newport-cigarettes.webp" alt="Jabu Cigs Product 4">
+            <img src="AmericanSpiritBlack_600x_138cf3ab-cdb1-b3db-763d7d2425fc.webp" alt="Jabu Cigs Product 2">
+            <img src="brown bear herbs.jpg" alt="Jabu Cigs Product 3">
+            <img src="newport menthol.jpeg" alt="Jabu Cigs Product 4">
         </div>
         
         <h2>Our Products</h2>
