--- a/index.html
+++ b/index.html
@@ -17,15 +17,13 @@
 <header>
 
 <h1>Welcome</h1>
-    colour: white:
 
 </header>
 
 
 <main>
 
-<p>DONT BE SHY SNEAK A PEAK:</p>
-    colour: white:
+<p style="color:white;>DONT BE SHY SNEAK A PEAK:</p>
 
     <img src="american spirit black" alt="our cigarettes">
 
@@ -34,7 +32,7 @@
 
 <footer>
 
-<p>&copy; JABU-CIGS</p>
+<p style="color:white:>&copy; JABU-CIGS</p>
 
 </footer>
 
