--- a/index.html
+++ b/index.html
@@ -16,8 +16,18 @@
 
 <header>
 
-<h1>Welcome</h1>
+<h1>Welcome</h1> 
 
+    <nav>
+
+<a href="index.html">Home</a> |
+
+<a href="about.html">About</a> |
+
+<a href="contact.html">Contact</a>
+
+</nav>
+    
 </header>
 
 
@@ -103,7 +113,8 @@
     </div>
     
     <div class="footer">
-        <p>Contact us: info@jabucigs.com | Phone: +74 581 889</p>
+        <p>Contact us: info@jabucigs.com | Phone: +267 74 581 889</p>
     </div>
 </body>
+
 </html>
