--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,17 @@
 
 <head>
 
+<style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            background: url('woman holding gaff.jpeg') no-repeat center center fixed;
+            background-size: cover;
+        }
+  </style>
+
 <meta charset="UTF-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +24,7 @@
 </head>
 
 <body>
-
+      
 <header>
 
 <h1>Contact Me</h1>
@@ -33,14 +44,14 @@
 
 <main>
 
-<p>If you'd like to get in touch, feel free to email me at <a href="mailto:example@example.com">example@example.com</a>.</p>
+<p>If you'd like to get in touch, feel free to email me at <a href="mailto:example@example.com">jabucigs@gmail.com</a>.</p>
 
 </main>
 
 
 <footer>
 
-<p>&copy; 2025 Your Name</p>
+<p>&copy; @JABU CIGS</p>
 
 </footer>
 
