--- a/about.html
+++ b/about.html
@@ -3,7 +3,17 @@
 <html lang="en">
 
 <head>
-
+  <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            background: url('woman holding gaff.jpeg') no-repeat center center fixed;
+            background-size: cover;
+        }
+    </style>
+  
 <meta charset="UTF-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,8 +27,8 @@
 <header>
 
 <h1>About Me</h1>
-
-<nav>
+  
+ <p>At Jabu Cigs, we are committed to delivering premium-quality cigarettes crafted from the finest tobacco leaves. With a passion for excellence and a dedication to customer satisfaction, we blend tradition and innovation to create a superior smoking experience. Our products are designed for those who appreciate the art of smoking, ensuring smoothness, rich flavor, and exceptional quality. Welcome to Jabu Cigs – where sophistication meets indulgence.</p>
 
 <a href="index.html">Home</a> |
 
@@ -41,7 +51,7 @@
 
 <footer>
 
-<p>&copy; 2023 Your Name</p>
+<p>&copy;@JABU CIGS</p>
 
 </footer>
 
