--- a/contact.html
+++ b/contact.html
@@ -44,14 +44,14 @@
 
 <main>
 
-<p>If you'd like to get in touch, feel free to email me at <a href="mailto:example@example.com">jabucigs@gmail.com</a>.</p>
+<p style="color:white;">if you'd like to get in touch, feel free to email me at <a href="mailto:example@example.com">jabucigs@gmail.com</a>.</p>
 
 </main>
 
 
 <footer>
 
-<p>&copy; @JABU CIGS</p>
+<p>&copy;JABU CIGS</p>
 
 </footer>
 
