--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
 <h1>About Me</h1>
   
- <p>At Jabu Cigs, we are committed to delivering premium-quality cigarettes crafted from the finest tobacco leaves. With a passion for excellence and a dedication to customer satisfaction, we blend tradition and innovation to create a superior smoking experience. Our products are designed for those who appreciate the art of smoking, ensuring smoothness, rich flavor, and exceptional quality. Welcome to Jabu Cigs – where sophistication meets indulgence.</p>
+<p style="color:white;">Jabu Cigs, we are committed to delivering premium-quality cigarettes crafted from the finest tobacco leaves. With a passion for excellence and a dedication to customer satisfaction, we blend tradition and innovation to create a superior smoking experience. Our products are designed for those who appreciate the art of smoking, ensuring smoothness, rich flavor, and exceptional quality. Welcome to Jabu Cigs – where sophistication meets indulgence.</p>
 
 <a href="index.html">Home</a> |
 
