--- a/about.html
+++ b/about.html
@@ -42,9 +42,9 @@
 
   <main>
 
-<p>Hi! I'm a beginner web developer learning how to use GitHub Pages.</p>
+<p style="color:white;">I'm a beginner web developer learning how to use GitHub Pages.</p>
 
-<p>This is my first multi-page website, and I'm excited to share it with you!</p>
+<p style="color:white;">this is my first multi-page website, and I'm excited to share it with you!</p>
 
 </main>
 
