--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 
 <body>
 
-<header>
-
-<h1>Welcome</h1> 
+<header> 
 
     <nav>
 
@@ -36,10 +34,15 @@
 
 
 <main>
+    <section id=hero">
+<img src="model holding cig.jpg" alt="cigarette" class="hero-image">
+    </section>
+    <dic class="welcome-message">
+
+        Welcome to JABU CIGS
+    </div>
 
 <p style="color:white;>DONT BE SHY SNEAK A PEAK:</p>
-
-    <img src="american spirit black" alt="our cigarettes">
 
 </main>
 
@@ -72,13 +75,6 @@
     <div class="container">
         <h2>Welcome to Jabu Cigs</h2>
         <p>Jabu Cigs offers the finest quality tobacco products, carefully crafted for an exceptional smoking experience.</p>
-        
-        <div class="images">
-            <img src="djarum black.jpg" alt="Jabu Cigs Product 1">
-            <img src="MARLBORO-BLACK08.webp" alt="Jabu Cigs Product 2">
-            <img src="brown bear herbs.jpg" alt="Jabu Cigs Product 3">
-            <img src="newport mentol.jpeg" alt="Jabu Cigs Product 4">
-        </div>
         
         <h2>Our Products</h2>
         <p>We offer a variety of premium cigarette products to satisfy different tastes and preferences.</p>
