--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 <img src="model holding cig.jpg" alt="cigarette" class="hero-image">
     </section>
     <dic class="welcome-message">
-
-        Welcome to JABU CIGS
+ Welcome to JABU CIGS
     </div>
 
 <p style="color:white;>DONT BE SHY SNEAK A PEAK:</p>
@@ -49,7 +48,7 @@
 
 <footer>
 
-<p style="color:white;>JABU-CIGS</p>
+<p>JABU-CIGS</p>
 
 </footer>
 
