--- a/product.html
+++ b/product.html
@@ -23,8 +23,34 @@
            <h2>TOBACCO CIGARETTES</h2>
            <div class="product-grid">
              <div class="product">
-               <img src=
-     </main>   
+                 <img src="Tobacco.jpg" alt="Cigarette Product 1">
+          </div>
+          <div class="product">
+            <img src="hupman.jpg" alt="Cigarette Product 2">
+          </div>
+          <div class="product">
+            <img src="brown bear herbs.jpg" alt="Cigarette Product 3">
+          </div>
+          <div class="product">
+            <img src="" alt="Cigarette Product 4">
+          </div>
+          <div class="product">
+            <img src="images/product5.jpg" alt="Cigarette Product 5">
+          </div>
+          <div class="product">
+            <img src="images/product6.jpg" alt="Cigarette Product 6">
+          </div>
+          <div class="product">
+            <img src="images/product7.jpg" alt="Cigarette Product 7">
+          </div>
+          <div class="product">
+            <img src="images/product8.jpg" alt="Cigarette Product 8">
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
+</html>     </main>   
   
   
     </body>
