--- a/product.html
+++ b/product.html
@@ -32,13 +32,13 @@
             <img src="brown bear herbs.jpg" alt="Cigarette Product 3">
           </div>
           <div class="product">
-            <img src="" alt="Cigarette Product 4">
+            <img src="nike cig.jpeg" alt="Cigarette Product 4">
           </div>
           <div class="product">
-            <img src="images/product5.jpg" alt="Cigarette Product 5">
+            <img src="cigarette-1841216_1280.png" alt="Cigarette Product 5">
           </div>
           <div class="product">
-            <img src="images/product6.jpg" alt="Cigarette Product 6">
+            <img src="" alt="Cigarette Product 6">
           </div>
           <div class="product">
             <img src="images/product7.jpg" alt="Cigarette Product 7">
