--- a/product.html
+++ b/product.html
@@ -38,20 +38,17 @@
             <img src="cigarette-1841216_1280.png" alt="Cigarette Product 5">
           </div>
           <div class="product">
-            <img src="" alt="Cigarette Product 6">
+            <img src="waltz.jpeg" alt="Cigarette Product 6">
           </div>
           <div class="product">
-            <img src="images/product7.jpg" alt="Cigarette Product 7">
+            <img src="marlboro drawer.jpeg" alt="Cigarette Product 7">
           </div>
           <div class="product">
-            <img src="images/product8.jpg" alt="Cigarette Product 8">
+            <img src="marlboro table.jpeg" alt="Cigarette Product 8">
           </div>
         </div>
       </section>
     </main>
-  </body>
-</html>     </main>   
+ </body>
   
-  
-    </body>
-  
+</html>
