--- a/product.html
+++ b/product.html
@@ -2,53 +2,96 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="with=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | JABU CIGS</title>
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
+    <style>
+      /* Set a fixed background */
+      body {
+        background: url('background.jpg') no-repeat center center fixed;
+        background-size: cover;
+        margin: 0;
+        font-family: Arial, sans-serif;
+      }
+
+      /* Styling for header */
+      header {
+        text-align: center;
+        padding: 20px;
+        background: rgba(0, 0, 0, 0.7);
+        color: white;
+      }
+
+      /* Navigation bar */
+      nav {
+        text-align: center;
+        background: black;
+        padding: 10px;
+      }
+
+      nav a {
+        color: white;
+        text-decoration: none;
+        margin: 0 15px;
+        font-size: 18px;
+      }
+
+      /* Product section */
+      .product-page {
+        text-align: center;
+        padding: 20px;
+      }
+
+      /* Product grid with flexbox */
+      .product-grid {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 20px;
+        padding: 20px;
+      }
+
+      .product {
+        width: 200px;
+        height: 250px;
+        overflow: hidden;
+      }
+
+      .product img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 10px;
+      }
+    </style>
   </head>
-    <body>
-      <header>
-<h1 class="hero text:>PREMIUM QUALITY CIGARETTES</h1>
-  </header>
-  <nav>
-  <a href="index.html">Home</a>
-<a href="prodcut.html">Prodcut</a>
-<a href="about.html">About</a>
-<a href="contact.html">Contact<a/>
-  </nav>
-     <main>
-       <section class="product-page">
-         <h1>OUR PRODUCT</h1>
-         <div class="product-page">
-           <h2>TOBACCO CIGARETTES</h2>
-           <div class="product-grid">
-             <div class="product">
-                 <img src="Tobacco.jpg" alt="Cigarette Product 1">
-          </div>
-          <div class="product">
-            <img src="hupman.jpg" alt="Cigarette Product 2">
-          </div>
-          <div class="product">
-            <img src="brown bear herbs.jpg" alt="Cigarette Product 3">
-          </div>
-          <div class="product">
-            <img src="nike cig.jpeg" alt="Cigarette Product 4">
-          </div>
-          <div class="product">
-            <img src="cigarette-1841216_1280.png" alt="Cigarette Product 5">
-          </div>
-          <div class="product">
-            <img src="waltz.jpeg" alt="Cigarette Product 6">
-          </div>
-          <div class="product">
-            <img src="marlboro drawer.jpeg" alt="Cigarette Product 7">
-          </div>
-          <div class="product">
-            <img src="marlboro table.jpeg" alt="Cigarette Product 8">
-          </div>
+  <body>
+    <header>
+      <h1>PREMIUM QUALITY CIGARETTES</h1>
+    </header>
+    
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="product.html">Product</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+
+    <main>
+      <section class="product-page">
+        <h1>OUR PRODUCT</h1>
+        <h2>TOBACCO CIGARETTES</h2>
+        <div class="product-grid">
+          <div class="product"><img src="nike cig.jpeg" alt="Cigarette Product 1"></div>
+          <div class="product"><img src="waltz.jpeg" alt="Cigarette Product 2"></div>
+          <div class="product"><img src="cigarette-1841216_1280.png" alt="Cigarette Product 3"></div>
+          <div class="product"><img src="hupman.jpg" alt="Cigarette Product 4"></div>
+          <div class="product"><img src="brown bear herbs.jpg" alt="Cigarette Product 5"></div>
+          <div class="product"><img src="american spirit black" alt="Cigarette Product 6"></div>
+          <div class="product"><img src="marlboro table.jpeg" alt="Cigarette Product 7"></div>
+          <div class="product"><img src="marlboro drawer.jpeg" alt="Cigarette Product 8"></div>
         </div>
       </section>
     </main>
- </body>
-  
+  </body>
 </html>
