--- a/product.html
+++ b/product.html
@@ -8,7 +8,7 @@
     <style>
       /* Set a fixed background */
       body {
-        background: url('background.jpg') no-repeat center center fixed;
+        background: url('model holding cig.jpg') no-repeat center center fixed;
         background-size: cover;
         margin: 0;
         font-family: Arial, sans-serif;
