--- a/product.html
+++ b/product.html
@@ -20,29 +20,33 @@
         padding: 20px;
         background: rgba(0, 0, 0, 0.7);
         color: white;
+        font-size: 24px;
+        font-weight: bold;
       }
 
-      /* Navigation bar */
+      /* Separate Navigation Bar */
       nav {
         text-align: center;
         background: black;
-        padding: 10px;
+        padding: 15px;
       }
 
       nav a {
         color: white;
         text-decoration: none;
-        margin: 0 15px;
+        margin: 0 20px;
         font-size: 18px;
+        font-weight: bold;
       }
 
       /* Product section */
       .product-page {
         text-align: center;
         padding: 20px;
+        color: white;
       }
 
-      /* Product grid with flexbox */
+      /* Product grid */
       .product-grid {
         display: flex;
         flex-wrap: wrap;
@@ -52,24 +56,32 @@
       }
 
       .product {
-        width: 200px;
-        height: 250px;
-        overflow: hidden;
+        width: 220px;
+        text-align: center;
       }
 
       .product img {
         width: 100%;
-        height: 100%;
+        height: 250px;
         object-fit: cover;
         border-radius: 10px;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+      }
+
+      /* Product Name Below Image */
+      .product-name {
+        margin-top: 10px;
+        font-size: 16px;
+        font-weight: bold;
+        color: white;
       }
     </style>
   </head>
   <body>
     <header>
-      <h1>PREMIUM QUALITY CIGARETTES</h1>
+      PREMIUM QUALITY CIGARETTES
     </header>
-    
+
     <nav>
       <a href="index.html">Home</a>
       <a href="product.html">Product</a>
@@ -82,14 +94,38 @@
         <h1>OUR PRODUCT</h1>
         <h2>TOBACCO CIGARETTES</h2>
         <div class="product-grid">
-          <div class="product"><img src="nike cig.jpeg" alt="Cigarette Product 1"></div>
-          <div class="product"><img src="waltz.jpeg" alt="Cigarette Product 2"></div>
-          <div class="product"><img src="cigarette-1841216_1280.png" alt="Cigarette Product 3"></div>
-          <div class="product"><img src="hupman.jpg" alt="Cigarette Product 4"></div>
-          <div class="product"><img src="brown bear herbs.jpg" alt="Cigarette Product 5"></div>
-          <div class="product"><img src="american spirit black" alt="Cigarette Product 6"></div>
-          <div class="product"><img src="marlboro table.jpeg" alt="Cigarette Product 7"></div>
-          <div class="product"><img src="marlboro drawer.jpeg" alt="Cigarette Product 8"></div>
+          <div class="product">
+            <img src="nike cig.jpeg" alt="Nike Cig">
+            <p class="nike cigarettes">Nike Cig</p>
+          </div>
+          <div class="product">
+            <img src="waltz.jpeg" alt="Waltz">
+            <p class="waltz clear cigarettes">Waltz</p>
+          </div>
+          <div class="product">
+            <img src="cigarette-1841216_1280.png" alt="Classic Cigarette">
+            <p class="Gauloise cigarettes">Classic Cigarette</p>
+          </div>
+          <div class="product">
+            <img src="hupman.jpg" alt="Hupman">
+            <p class="hupman premium cigarettes">Hupman</p>
+          </div>
+          <div class="product">
+            <img src="brown bear herbs.jpg" alt="Brown Bear Herbs">
+            <p class="brown bear herbal cigarettes">Brown Bear Herbs</p>
+          </div>
+          <div class="product">
+            <img src="american spirit black" alt="American Spirit Black">
+            <p class="american spirit black premium cigarettes">American Spirit Black</p>
+          </div>
+          <div class="product">
+            <img src="marlboro table.jpeg" alt="Marlboro Table">
+            <p class="marlboro designer table">Marlboro Table</p>
+          </div>
+          <div class="product">
+            <img src="marlboro drawer.jpeg" alt="Marlboro Drawer">
+            <p class="marlboro designer drawer">Marlboro Drawer</p>
+          </div>
         </div>
       </section>
     </main>
