--- a/product.html
+++ b/product.html
@@ -103,8 +103,8 @@
             <p class="waltz clear cigarettes">Waltz</p>
           </div>
           <div class="product">
-            <img src="cigarette-1841216_1280.png" alt="Classic Cigarette">
-            <p class="Gauloise cigarettes">Classic Cigarette</p>
+            <img src="Inverroche Limestone Rum.jpeg" alt="Classic Cigarette">
+            <p class="Inverroche Limestone Rum cigarette>Classic Cigarette</p>
           </div>
           <div class="product">
             <img src="hupman.jpg" alt="Hupman">
@@ -119,8 +119,8 @@
             <p class="american spirit black premium cigarettes">American Spirit Black</p>
           </div>
           <div class="product">
-            <img src="marlboro table.jpeg" alt="Marlboro Table">
-            <p class="marlboro designer table">Marlboro Table</p>
+            <img src="marlboro ash tray.jpeg" alt="Marlboro Table">
+            <p class="marlboro designer ash tray">Marlboro Table</p>
           </div>
           <div class="product">
             <img src="marlboro drawer.jpeg" alt="Marlboro Drawer">
