--- a/product.html
+++ b/product.html
@@ -95,19 +95,19 @@
         <h2>TOBACCO CIGARETTES</h2>
         <div class="product-grid">
           <div class="product">
-            <img src="nike cig.jpeg" alt="Nike Cig">
-            <p class="nike cigarettes">Nike Cig</p>
+            <img src="nike cig.jpeg" alt="Nike Cigarettes">
+            <p class="nike cigarettes">Nike Cigarettes</p>
           </div>
           <div class="product">
-            <img src="waltz.jpeg" alt="Waltz">
-            <p class="waltz clear cigarettes">Waltz</p>
+            <img src="waltz.jpeg" alt="Waltz cigarettes">
+            <p class="waltz clear cigarettes">Waltz cigarettes</p>
           </div>
           <div class="product">
-            <img src="Inverroche Limestone Rum.jpeg" alt="Classic Cigarette">
-            <p class="Inverroche Limestone Rum cigarette>Classic Cigarette</p>
+            <img src="Inverroche Limestone Rum.jpeg" alt="ILR Cigarettes">
+            <p class="ILR cigarettes">ILR cigarettes</p>
           </div>
           <div class="product">
-            <img src="hupman.jpg" alt="Hupman">
+            <img src="hupman.jpg" alt="Hupman cigarettes">
             <p class="hupman premium cigarettes">Hupman</p>
           </div>
           <div class="product">
@@ -119,8 +119,8 @@
             <p class="american spirit black premium cigarettes">American Spirit Black</p>
           </div>
           <div class="product">
-            <img src="marlboro ash tray.jpeg" alt="Marlboro Table">
-            <p class="marlboro designer ash tray">Marlboro Table</p>
+            <img src="marlboro ash tray.jpeg" alt="marlboro ash tray">
+            <p class="marlboro designer ash tray">marlboro ash tray</p>
           </div>
           <div class="product">
             <img src="marlboro drawer.jpeg" alt="Marlboro Drawer">
