--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       .bg1 { background-image: url('black guy holdong cig.jpg'); }
       .bg2 { background-image: url('giu holding cig.jpg'); }
-      .bg3 { background-image: url(''); }
+      .bg3 { background-image: url('couple smoking.jpg'); }
 
       /* Content overlay */
       .content {
@@ -87,9 +87,9 @@
   <body>
     <!-- Background images -->
     <div class="background-container">
-      <div class="bg-image bg1"></div>
-      <div class="bg-image bg2"></div>
-      <div class="bg-image bg3"></div>
+      <div class="black guy holdong cig.jpg"></div>
+      <div class="guy holding cig.jpg"></div>
+      <div class="couple smoking.jpg"></div>
     </div>
 
     <!-- Header -->
