--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       }
 
       .bg1 { background-image: url('black guy holdong cig.jpg'); }
-      .bg2 { background-image: url('giu holding cig.jpg'); }
+      .bg2 { background-image: url('guy holding cig.jpg'); }
       .bg3 { background-image: url('couple smoking.jpg'); }
 
       /* Content overlay */
