--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         height: 100vh;
       }
 
+      /* Assign images */
       .bg1 { background-image: url('black guy holdong cig.jpg'); }
       .bg2 { background-image: url('guy holding cig.jpg'); }
       .bg3 { background-image: url('couple smoking.jpg'); }
@@ -87,9 +88,9 @@
   <body>
     <!-- Background images -->
     <div class="background-container">
-      <div class="black guy holdong cig.jpg"></div>
-      <div class="guy holding cig.jpg"></div>
-      <div class="couple smoking.jpg"></div>
+      <div class="bg-image bg1"></div>
+      <div class="bg-image bg2"></div>
+      <div class="bg-image bg3"></div>
     </div>
 
     <!-- Header -->
