--- a/index.html
+++ b/index.html
@@ -1,115 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | JABU CIGS</title>
     <link rel="stylesheet" href="style.css">
     <style>
-      /* Full-page container */
-      body, html {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        overflow: auto;
-      }
+        /* Remove margin and padding */
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: auto;
+        }
 
-      /* Fixed background container */
-      .background-container {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        display: flex;
-      }
+        /* Fixed background container */
+        .background-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+        }
 
-      /* Background images side by side */
-      .bg-image {
-        flex: 1;
-        background-size: cover;
-        background-position: center;
-        height: 100vh;
-      }
+        /* Background images */
+        .bg-image {
+            flex: 1;
+            height: 100vh;
+            background-size: cover;
+            background-position: center;
+        }
 
-      /* Assign images */
-      .bg1 { background-image: url('black guy holdong cig.jpg'); }
-      .bg2 { background-image: url('guy holding cig.jpg'); }
-      .bg3 { background-image: url('couple smoking.jpg'); }
+        /* Assign images */
+        .bg1 { background-image: url('image1.jpg'); }
+        .bg2 { background-image: url('image2.jpg'); }
+        .bg3 { background-image: url('image3.jpg'); }
 
-      /* Content overlay */
-      .content {
-        position: relative;
-        z-index: 2;
-        text-align: center;
-        color: white;
-        padding: 20px;
-      }
+        /* Navigation bar */
+        nav {
+            position: relative;
+            z-index: 2;
+            background: rgba(0, 0, 0, 0.8);
+            text-align: center;
+            padding: 15px;
+        }
 
-      /* Styling for header */
-      header {
-        text-align: center;
-        padding: 20px;
-        background: rgba(0, 0, 0, 0.7);
-        color: white;
-        font-size: 24px;
-        font-weight: bold;
-        position: relative;
-        z-index: 2;
-      }
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 20px;
+            font-size: 18px;
+            font-weight: bold;
+        }
 
-      /* Navigation bar */
-      nav {
-        text-align: center;
-        background: black;
-        padding: 15px;
-        position: relative;
-        z-index: 2;
-      }
-
-      nav a {
-        color: white;
-        text-decoration: none;
-        margin: 0 20px;
-        font-size: 18px;
-        font-weight: bold;
-      }
-
-      /* Main content section */
-      .home-content {
-        position: relative;
-        z-index: 2;
-        padding: 50px;
-        color: white;
-        text-align: center;
-      }
+        /* Main content */
+        .home-content {
+            position: relative;
+            z-index: 2;
+            color: white;
+            text-align: center;
+            padding: 50px;
+        }
     </style>
-  </head>
-  <body>
+</head>
+<body>
+
     <!-- Background images -->
     <div class="background-container">
-      <div class="bg-image bg1"></div>
-      <div class="bg-image bg2"></div>
-      <div class="bg-image bg3"></div>
+        <div class="bg-image bg1"></div>
+        <div class="bg-image bg2"></div>
+        <div class="bg-image bg3"></div>
     </div>
 
-    <!-- Header -->
-    <header>
-      WELCOME TO JABU CIGS
-    </header>
-
-    <!-- Navigation -->
+    <!-- Navigation Banner -->
     <nav>
-      <a href="index.html">Home</a>
-      <a href="product.html">Product</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="product.html">Product</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
     <!-- Main Content -->
     <main class="home-content">
-      <h1>EXPERIENCE PREMIUM QUALITY</h1>
-      <p>Discover our range of top-tier cigarettes, crafted for a smooth and refined smoking experience.</p>
+        <h1>EXPERIENCE PREMIUM QUALITY</h1>
+        <p>Discover our range of top-tier cigarettes, crafted for a smooth and refined smoking experience.</p>
     </main>
-  </body>
+
+</body>
 </html>
