--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         }
 
         /* Assign images */
-        .bg1 { background-image: url('image1.jpg'); }
-        .bg2 { background-image: url('image2.jpg'); }
-        .bg3 { background-image: url('image3.jpg'); }
+        .bg1 { background-image: url('black guy holding cig.jpg'); }
+        .bg2 { background-image: url('guy holding cig.jpg'); }
+        .bg3 { background-image: url('couple smoking.jpg'); }
 
         /* Navigation bar */
         nav {
