--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         }
 
         /* Assign images */
-        .bg1 { background-image: url('black guy holding cig.jpg'); }
+        .bg1 { background-image: url('girl smoking.jpg'); }
         .bg2 { background-image: url('guy holding cig.jpg'); }
         .bg3 { background-image: url('couple smoking.jpg'); }
 
