--- a/product.html
+++ b/product.html
@@ -104,7 +104,7 @@
           </div>
           <div class="product">
             <img src="Inverroche Limestone Rum.jpeg" alt="ILR Cigarettes">
-            <p class="ILR cigarettes">ILR cigarettes</p>
+            <p class="wood land cigarettes">wood land cigarettes</p>
           </div>
           <div class="product">
             <img src="hupman.jpg" alt="Hupman cigarettes">
