--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
             margin: 0;
             padding: 0;
             text-align: center;
-            background: url('') no-repeat center center fixed;
+            background: url('cig wallpaper.jpg') no-repeat center center fixed;
             background-size: cover;
             color: white;
         }
