--- a/contact.html
+++ b/contact.html
@@ -1,61 +1,147 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
-
-<style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us | JABU CIGS</title>
+    <link rel="stylesheet" href="styles.css">
+    
+    <style>
+        /* General Styles */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             text-align: center;
-            background: url('woman holding gaff.jpeg') no-repeat center center fixed;
+            background: url('') no-repeat center center fixed;
             background-size: cover;
+            color: white;
         }
-  </style>
 
-<meta charset="UTF-8">
+        /* Header */
+        header {
+            background: rgba(0, 0, 0, 0.8);
+            padding: 20px;
+            font-size: 24px;
+            font-weight: bold;
+        }
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles.css"
-<title>Contact Me</title>
+        /* Navigation Bar */
+        nav {
+            background: black;
+            padding: 15px;
+        }
 
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 20px;
+            font-size: 18px;
+            font-weight: bold;
+            transition: 0.3s;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+            color: #f8c471;
+        }
+
+        /* Contact Section */
+        .contact-container {
+            max-width: 600px;
+            margin: 50px auto;
+            background: rgba(0, 0, 0, 0.7);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
+        }
+
+        .contact-container a {
+            color: #f8c471;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        .contact-container a:hover {
+            text-decoration: underline;
+        }
+
+        /* Contact Form */
+        .contact-form input,
+        .contact-form textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
+        .contact-form button {
+            background: #f8c471;
+            color: black;
+            border: none;
+            padding: 10px 15px;
+            font-size: 18px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+
+        .contact-form button:hover {
+            background: white;
+            color: black;
+        }
+
+        /* Footer */
+        footer {
+            background: rgba(0, 0, 0, 0.8);
+            padding: 10px;
+            font-size: 14px;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 
 <body>
-      
-<header>
 
-<h1>Contact Me</h1>
+    <!-- Header -->
+    <header>
+        <h1>Contact JABU CIGS</h1>
+    </header>
 
-<nav>
+    <!-- Navigation -->
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+<a href="product.hmtl">product</a>
+    </nav>
 
-<a href="index.html">Home</a> |
+    <!-- Contact Section -->
+    <main>
+        <div class="contact-container">
+            <h2>Get in Touch</h2>
+            <p>We’d love to hear from you! Feel free to reach out to us via email.</p>
+            <p>Email: <a href="mailto:jabucigs@gmail.com">jabucigs@gmail.com</a></p>
 
-<a href="about.html">About</a> |
+            <!-- Optional Contact Form -->
+            <h3>Send us a message</h3>
+            <form class="contact-form">
+                <input type="text" placeholder="Your Name" required>
+                <input type="email" placeholder="Your Email" required>
+                <textarea rows="4" placeholder="Your Message" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+        </div>
+    </main>
 
-<a href="contact.html">Contact</a>
-
-</nav>
-
-</header>
-
-
-<main>
-
-<p style="color:white;">if you'd like to get in touch, feel free to email me at <a href="mailto:example@example.com">jabucigs@gmail.com</a>.</p>
-
-</main>
-
-
-<footer>
-
-<p>&copy;JABU CIGS</p>
-
-</footer>
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 JABU CIGS | All Rights Reserved</p>
+    </footer>
 
 </body>
-
 </html>
-
