--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
             margin: 0;
             padding: 0;
             text-align: center;
-            background: url('') no-repeat center center fixed;
+            background: url('smoke face.jpg') no-repeat center center fixed;
             background-size: cover;
             color: white;
         }
