--- a/about.html
+++ b/about.html
@@ -79,6 +79,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
+<a href="product.html">product</a>
     </nav>
 
     <!-- Main Content -->
