--- a/about.html
+++ b/about.html
@@ -77,6 +77,7 @@
     <!-- Navigation -->
     <nav>
         <a href="index.html">Home</a>
+        <a href="product.html">product</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
 <a href="product.html">product</a>
@@ -89,14 +90,12 @@
         <p>We blend tradition with innovation to offer a **superior smoking experience**—ensuring smoothness, rich flavor, and exceptional quality.</p>
         <p>Welcome to **Jabu Cigs** – where sophistication meets indulgence.</p>
         
-        <h3>About the Creator</h3>
-        <p>I'm a beginner web developer exploring the world of **web design** and **GitHub Pages**.</p>
-        <p>This is my first multi-page website, and I'm excited to share it with you!</p>
+        
     </main>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Jabu Cigs | All Rights Reserved</p>
+        <p>&copy; 2024 Jabu Cigs | </p>
     </footer>
 
 </body>
