--- a/feedback.html
+++ b/feedback.html
@@ -3,5 +3,8 @@
   <input type="text" name="firstname"><br>
   Last name:<br>
   <input type="text" name="lastname">
+  <input type="radio" name="gender" value="male" checked> Male<br>
+  <input type="radio" name="gender" value="female"> Female<br> 
+  <input type="radio" name="gender" value="other"> Other
 
 </form>
