--- a/feedback.html
+++ b/feedback.html
@@ -2,7 +2,7 @@
   First name:<br> 
   <input type="text" name="firstname"><br>
   Last name:<br>
-  <input type="text" name="lastname">
+  <input type="text" name="lastname"><br>
   <input type="radio" name="gender" value="male" checked> Male<br>
   <input type="radio" name="gender" value="female"> Female<br> 
   <input type="radio" name="gender" value="other"> Other 
