--- a/thanks.html
+++ b/thanks.html
@@ -1,2 +1,5 @@
 <form action="thanks.html"> 
-  
+  First name:<br> <input type="text" name="firstname" value="Mickey"><br>
+  Last name:<br> <input type="text" name="lastname" value="Mouse"><br><br>
+  <input type="submit" value="Submit">
+</form>
