--- a/index.html
+++ b/index.html
@@ -6,43 +6,35 @@
     <title>Home | JABU CIGS</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        /* Remove margin and padding */
-        body, html {
+        /* Reset Styles */
+        * {
             margin: 0;
             padding: 0;
-            height: 100%;
-            overflow: auto;
+            box-sizing: border-box;
         }
 
-        /* Fixed background container */
-        .background-container {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
+        /* Full-Height Layout */
+        html, body {
             height: 100%;
             display: flex;
-        }
-
-        /* Background images */
-        .bg-image {
-            flex: 1;
-            height: 100vh;
-            background-size: cover;
-            background-position: center;
-        }
-
-        /* Assign images */
-        .bg1 { background-image: url('girl smoking.jpg'); }
-        .bg2 { background-image: url('guy holding cig.jpg'); }
-        .bg3 { background-image: url('couple smoking.jpg'); }
-
-        /* Navigation bar */
-        nav {
-            position: relative;
-            z-index: 2;
-            background: rgba(0, 0, 0, 0.8);
+            flex-direction: column;
+            font-family: Arial, sans-serif;
             text-align: center;
+            color: white;
+            background: black;
+        }
+
+        /* Header */
+        header {
+            background: rgba(0, 0, 0, 0.7);
+            padding: 20px;
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        /* Navigation */
+        nav {
+            background: black;
             padding: 15px;
         }
 
@@ -54,26 +46,66 @@
             font-weight: bold;
         }
 
-        /* Main content */
-        .home-content {
-            position: relative;
-            z-index: 2;
-            color: white;
+        nav a:hover {
+            text-decoration: underline;
+            color: #f8c471;
+        }
+
+        /* Background Images */
+        .background-container {
+            display: flex;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
+        }
+
+        .bg-image {
+            flex: 1;
+            height: 100vh;
+            background-size: cover;
+            background-position: center;
+        }
+
+        .bg1 { background-image: url('girl smoking.jpg'); }
+        .bg2 { background-image: url('guy holding cig.jpg'); }
+        .bg3 { background-image: url('couple smoking.jpg'); }
+
+        /* Main Content - Pushes Footer Down */
+        main {
+            flex: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            max-width: 800px;
+            margin: auto;
+            background: rgba(0, 0, 0, 0.6);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
+        }
+
+        /* Footer at Bottom */
+        footer {
+            background: rgba(0, 0, 0, 0.8);
+            padding: 10px;
+            font-size: 14px;
             text-align: center;
-            padding: 50px;
+            width: 100%;
         }
     </style>
 </head>
 <body>
 
-    <!-- Background images -->
-    <div class="background-container">
-        <div class="bg-image bg1"></div>
-        <div class="bg-image bg2"></div>
-        <div class="bg-image bg3"></div>
-    </div>
+    <!-- Header -->
+    <header>
+        <h1>Jabu Cigs</h1>
+    </header>
 
-    <!-- Navigation Banner -->
+    <!-- Navigation -->
     <nav>
         <a href="index.html">Home</a>
         <a href="product.html">Product</a>
@@ -81,11 +113,23 @@
         <a href="contact.html">Contact</a>
     </nav>
 
+    <!-- Background Images -->
+    <div class="background-container">
+        <div class="bg-image bg1"></div>
+        <div class="bg-image bg2"></div>
+        <div class="bg-image bg3"></div>
+    </div>
+
     <!-- Main Content -->
-    <main class="home-content">
-        <h1>EXPERIENCE PREMIUM QUALITY</h1>
+    <main>
+        <h2>EXPERIENCE PREMIUM QUALITY</h2>
         <p>Discover our range of top-tier cigarettes, crafted for a smooth and refined smoking experience.</p>
     </main>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Jabu Cigs | All Rights Reserved</p>
+    </footer>
 
 </body>
 </html>
