--- a/product.html
+++ b/product.html
@@ -33,10 +33,11 @@
             font-weight: bold;
         }
 
-        /* Navigation */
+        /* Navigation - Flush with Header */
         nav {
             background: black;
             padding: 15px;
+            margin-top: 0; /* Ensures no gap between header and navigation */
         }
 
         nav a {
@@ -52,7 +53,7 @@
             color: #f8c471;
         }
 
-        /* Main Content - Pushes Footer Down */
+        /* Main Content */
         main {
             flex: 1;
             display: flex;
@@ -99,7 +100,7 @@
             color: white;
         }
 
-        /* Footer at Bottom */
+        /* Footer */
         footer {
             background: rgba(0, 0, 0, 0.8);
             padding: 10px;
@@ -116,7 +117,7 @@
         <h1>PREMIUM QUALITY CIGARETTES</h1>
     </header>
 
-    <!-- Navigation -->
+    <!-- Navigation (Directly Under Header) -->
     <nav>
         <a href="index.html">Home</a>
         <a href="product.html">Product</a>
@@ -173,3 +174,4 @@
 
 </body>
 </html>
+          
