--- a/product.html
+++ b/product.html
@@ -25,19 +25,26 @@
             background-size: cover;
         }
 
+        /* Header + Navigation Wrapper */
+        .header-nav {
+            display: flex;
+            flex-direction: column;
+        }
+
         /* Header */
         header {
             background: rgba(0, 0, 0, 0.7);
             padding: 20px;
             font-size: 24px;
             font-weight: bold;
+            margin-bottom: 0; /* Prevents gap */
         }
 
         /* Navigation - Flush with Header */
         nav {
             background: black;
             padding: 15px;
-            margin-top: 0; /* Ensures no gap between header and navigation */
+            margin: 0; /* Ensures no gap between header and navigation */
         }
 
         nav a {
@@ -112,18 +119,19 @@
 </head>
 <body>
 
-    <!-- Header -->
-    <header>
-        <h1>PREMIUM QUALITY CIGARETTES</h1>
-    </header>
+    <!-- Header + Navigation Wrapper -->
+    <div class="header-nav">
+        <header>
+            <h1>PREMIUM QUALITY CIGARETTES</h1>
+        </header>
 
-    <!-- Navigation (Directly Under Header) -->
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="product.html">Product</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-    </nav>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="product.html">Product</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </div>
 
     <!-- Main Content -->
     <main>
