--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             text-align: center;
             color: white;
             background: black;
+            overflow: hidden;
         }
 
         /* Header */
@@ -32,7 +33,7 @@
             font-weight: bold;
         }
 
-        /* Navigation */
+        /* Navigation (Flush with Header) */
         nav {
             background: black;
             padding: 15px;
@@ -51,15 +52,11 @@
             color: #f8c471;
         }
 
-        /* Background Images */
+        /* Background Images Side by Side */
         .background-container {
             display: flex;
             width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: -1;
+            flex: 1;
         }
 
         .bg-image {
@@ -73,7 +70,17 @@
         .bg2 { background-image: url('guy holding cig.jpg'); }
         .bg3 { background-image: url('couple smoking.jpg'); }
 
-       
+        /* Main Content (Centered) */
+        main {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: rgba(0, 0, 0, 0.6);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
+        }
 
         /* Footer at Bottom */
         footer {
@@ -82,6 +89,8 @@
             font-size: 14px;
             text-align: center;
             width: 100%;
+            position: absolute;
+            bottom: 0;
         }
     </style>
 </head>
@@ -92,7 +101,7 @@
         <h1>Jabu Cigs</h1>
     </header>
 
-    <!-- Navigation -->
+    <!-- Navigation (Directly Under Header) -->
     <nav>
         <a href="index.html">Home</a>
         <a href="product.html">Product</a>
@@ -100,14 +109,14 @@
         <a href="contact.html">Contact</a>
     </nav>
 
-    <!-- Background Images -->
+    <!-- Background Images Side by Side -->
     <div class="background-container">
         <div class="bg-image bg1"></div>
         <div class="bg-image bg2"></div>
         <div class="bg-image bg3"></div>
     </div>
 
-    <!-- Main Content -->
+    <!-- Main Content (Overlayed Center) -->
     <main>
         <h2>EXPERIENCE PREMIUM QUALITY</h2>
         <p>Discover our range of top-tier cigarettes, crafted for a smooth and refined smoking experience.</p>
