--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         nav {
             background: black;
             padding: 15px;
+            display: flex;
+            justify-content: center;
         }
 
         nav a {
@@ -56,7 +58,7 @@
         .background-container {
             display: flex;
             width: 100%;
-            flex: 1;
+            flex-grow: 1; /* Ensures it fills available space */
         }
 
         .bg-image {
@@ -89,7 +91,7 @@
             font-size: 14px;
             text-align: center;
             width: 100%;
-            position: absolute;
+            position: fixed;
             bottom: 0;
         }
     </style>
