--- a/thanks.html
+++ b/thanks.html
@@ -1,5 +1,23 @@
 <form action="thanks.html"> 
   First name:<br> <input type="text" name="firstname" value="Mickey"><br>
   Last name:<br> <input type="text" name="lastname" value="Mouse"><br><br>
+  <input type="text" name="username" value="neo" size="10"><br>
+
+<input type="text" name="email"> <br>
+
+<input type="text" name="telephone" size="8"><br>
+
+  <label for="accounts">Account Executive: </label><input type="checkbox" 
+  id="accounts" name="accounts" ><br>
+
+Business Executive: <input type="checkbox" id="job">
+
+Inside Sales: <input type="checkbox" >
+
+Sales Management: <input type="checkbox" >
+
+VP Sales: <input type="checkbox" >
+  
   <input type="submit" value="Submit">
+
 </form>
