--- a/product.html
+++ b/product.html
@@ -132,6 +132,7 @@
             <a href="product.html">Product</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
+            <a href="feedback.html">feedback</a>      
         </nav>
     </div>
 
