--- a/feedback.html
+++ b/feedback.html
@@ -91,6 +91,13 @@ VP Sales: <input type="checkbox" >
   <input type="radio" name="gender" value="male" checked> Male<br>
   <input type="radio" name="gender" value="female"> Female<br> 
   <input type="radio" name="gender" value="other"> Other 
-  
+
+   <nav>
+        <a href="index.html">Home</a>
+        <a href="product.html">Product</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+        <a href="feedback.html">feedback</a>    
+    </nav>  
 
 </form>
