--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | JABU CIGS</title>
+    <title>Home | GrimmDraw</title>
     <link rel="stylesheet" href="style.css">
     <style>
        
@@ -121,7 +121,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Jabu Cigs | All Rights Reserved</p>
+        <p>&copy; 2025 GrimmDraw | All Rights Reserved</p>
     </footer>
 
 </body>
