--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us | JABU CIGS</title>
+    <title>About Us | GrimmDraw</title>
     <link rel="stylesheet" href="styles.css">
     
     <style>
@@ -83,7 +83,7 @@
 
 
     <header>
-        <h1>About Jabu Cigs</h1>
+        <h1>About GrimmDraw</h1>
     </header>
 
 
@@ -98,13 +98,13 @@
     
     <main>
         <h2>Premium Quality, Timeless Tradition</h2>
-        <p>At <strong>Jabu Cigs</strong>, we are committed to delivering premium-quality cigarettes crafted from the finest tobacco leaves. Our passion for excellence and dedication to customer satisfaction set us apart.</p>
+        <p>At <strong>GrimmDraw</strong>,At GrimmDraw, we redefine indulgence with a curated selection of premium nicotine experiences. From rich, hand-crafted cigarettes to cutting-edge vape innovations and refined nicotine blends, our offerings are designed for those who appreciate sophistication with an edge. Each product embodies bold character, meticulous quality, and a taste for the unapologetically distinct. This is not just a brand—it’s a statement./p>
         <p>We blend tradition with innovation to offer a <strong>superior smoking experience</strong>—ensuring smoothness, rich flavor, and exceptional quality.</p>
-        <p>Welcome to <strong>Jabu Cigs</strong> – where sophistication meets indulgence.</p>
+        <p>Welcome to <strong>GrimmDraw</strong> – where sophistication meets indulgence.</p>
     </main>
 
     <footer>
-        <p>&copy; 2024 Jabu Cigs | All Rights Reserved</p>
+        <p>&copy; 2025 GrimmDraw | All Rights Reserved</p>
     </footer>
 
 </body>
