--- a/product.html
+++ b/product.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product | JABU CIGS</title>
+    <title>Product | GrimmDraw</title>
     <link rel="stylesheet" href="style.css">
     <style>
      
@@ -124,7 +124,7 @@
 
     <div class="header-nav">
         <header>
-            <h1>PREMIUM QUALITY CIGARETTES</h1>
+            <h1>GrimmDraw — Where Vice Meets Virtue</h1>
         </header>
 
         <nav>
@@ -180,7 +180,7 @@
 
    
     <footer>
-        <p>&copy; 2024 Jabu Cigs | All Rights Reserved</p>
+        <p>&copy; 2025 GrimmDraw | All Rights Reserved</p>
     </footer>
 
 </body>
