--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | GrimmDraw</title>
-    <link rel="stylesheet" href="style.css">
+
     <style>
        
         * {
@@ -96,7 +92,7 @@
 
  
     <header>
-        <h1>Jabu Cigs</h1>
+        <h1>GrimmDraw</h1>
     </header>
 
     
