--- a/product.html
+++ b/product.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Product | GrimmDraw</title>
     <style>
         * {
@@ -22,17 +22,11 @@
             background-size: cover;
         }
 
-        .header-nav {
-            display: flex;
-            flex-direction: column;
-        }
-
         header {
             background: rgba(0, 0, 0, 0.7);
             padding: 20px;
             font-size: 24px;
             font-weight: bold;
-            margin: 0; /* Ensure no margin below */
         }
 
         nav {
@@ -40,7 +34,6 @@
             padding: 15px;
             display: flex;
             justify-content: center;
-            margin: 0; /* No spacing between header and nav */
         }
 
         nav a {
@@ -114,19 +107,17 @@
 </head>
 <body>
 
-    <div class="header-nav">
-        <header>
-            <h1>GrimmDraw — Where Vice Meets Virtue</h1>
-        </header>
+    <header>
+        <h1>GrimmDraw</h1>
+    </header>
 
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="product.html">Product</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-            <a href="feedback.html">Feedback</a>      
-        </nav>
-    </div>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="product.html">Product</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+        <a href="feedback.html">Feedback</a>
+    </nav>
 
     <main>
         <section class="product-page">
