--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,9 @@
             padding: 20px;
             font-size: 24px;
             font-weight: bold;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         nav {
